--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   uuid: ^4.3.3
   image_picker: ^1.0.7
   cloudinary: ^1.2.0
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
