--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   image_picker: ^1.0.7
   cloudinary: ^1.2.0
   file_picker: ^6.1.1
+  smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.0.0
 
 dev_dependencies:
   flutter_test:
