--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   file_picker: ^6.1.1
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.0.0
+  pdfx: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -108,6 +109,8 @@ flutter:
     - assets/images/upload.jpg
     - assets/images/job.jpg
     - assets/images/aptitude.jpg
+    - assets/images/telegram.jpg
+    - assets/pdfs/
 
     # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
