--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,17 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.0.0
   pdfx: ^2.6.0
+ 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
